--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "csv-writer": "^1.6.0",
     "dotenv": "^16.4.7",
-    "mongodb": "^6.14.2"
+    "mongodb": "^6.14.2",
+    "mysql2": "^3.13.0"
   }
 }
